Adding remaining SQL queries for getting only needed columns from tables

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "458c963d-dd64-4f4b-9ec2-5e47eed1e6a4",
    "metadata": {},
    "outputs": [
@@ -1221,6 +1221,11 @@
     "    ner\n",
     "FROM\n",
     "    \"FoodKG\"\n",
+    "WHERE\n",
+    "    id IS NOT NULL AND\n",
+    "    title IS NOT NULL AND\n",
+    "    ingredients IS NOT NULL AND\n",
+    "    ner IS NOT NULL\n",
     "LIMIT 500;\n",
     "\"\"\"\n",
     "\n",
@@ -1233,7 +1238,28 @@
    "execution_count": null,
    "id": "c7ad9f04",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       id                                        name\n",
+      "0    2047            Energy (Atwater General Factors)\n",
+      "1    2048           Energy (Atwater Specific Factors)\n",
+      "2    1001                                      Solids\n",
+      "3    1002                                    Nitrogen\n",
+      "4    1003                                     Protein\n",
+      "..    ...                                         ...\n",
+      "469  2061                         Ergosta-7,22-dienol\n",
+      "470  2062                          Ergosta-5,7-dienol\n",
+      "471  2063                                  Verbascose\n",
+      "472  2064                            Oligosaccharides\n",
+      "473  2065  Low Molecular Weight Dietary Fiber (LMWDF)\n",
+      "\n",
+      "[474 rows x 2 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "query = \"\"\"\n",
     "SELECT\n",
@@ -1241,6 +1267,99 @@
     "    name\n",
     "FROM\n",
     "    usda_2022_nutrient_master\n",
+    "WHERE\n",
+    "    id IS NOT NULL AND\n",
+    "    name IS NOT NULL\n",
+    "LIMIT 500;\n",
+    "\"\"\"\n",
+    "\n",
+    "result = pd.read_sql(query, engine)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8497f95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      fdc_id                                        description\n",
+      "0    1105904                         WESSON Vegetable Oil 1 GAL\n",
+      "1    1105905                                 SWANSON BROTH BEEF\n",
+      "2    1105906           CAMPBELL'S SLOW KETTLE SOUP CLAM CHOWDER\n",
+      "3    1105907        CAMPBELL'S SLOW KETTLE SOUP CHEESE BROCCOLI\n",
+      "4    1105898  Discrepancy between the Atwater factor predict...\n",
+      "..       ...                                                ...\n",
+      "495  1106392  MEATLOAF WITH PORTOBELLO MUSHROOM GRAVY MEATLO...\n",
+      "496  1106393  CRUSTLESS CHICKEN POT PIE WHITE MEAT CHICKEN, ...\n",
+      "497  1106394                                          BBQ SAUCE\n",
+      "498  1106395           THAI-STYLE COCONUT CHICKEN, MEDIUM SPICY\n",
+      "499  1106396                                    SHRIMP PAD THAI\n",
+      "\n",
+      "[500 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"\"\"\n",
+    "SELECT\n",
+    "    fdc_id,\n",
+    "    description\n",
+    "FROM\n",
+    "    usda_2022_food_branded_experimental\n",
+    "WHERE\n",
+    "    fdc_id IS NOT NULL AND\n",
+    "    description IS NOT NULL\n",
+    "LIMIT 500;\n",
+    "\"\"\"\n",
+    "\n",
+    "result = pd.read_sql(query, engine)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "75750f3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           id   fdc_id  nutrient_id\n",
+      "0    13706913  1105904         1003\n",
+      "1    13706914  1105904         1004\n",
+      "2    13706915  1105904         1005\n",
+      "3    13706924  1105904         1110\n",
+      "4    13706918  1105904         1079\n",
+      "..        ...      ...          ...\n",
+      "495  13707096  1105935         2000\n",
+      "496  13707094  1105935         1005\n",
+      "497  13707101  1105935         1093\n",
+      "498  13707100  1105935         1092\n",
+      "499  13707099  1105935         1089\n",
+      "\n",
+      "[500 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"\"\"\n",
+    "SELECT\n",
+    "    id,\n",
+    "    fdc_id,\n",
+    "    nutrient_id\n",
+    "FROM\n",
+    "    usda_2022_branded_food_nutrients\n",
+    "WHERE\n",
+    "    id IS NOT NULL AND\n",
+    "    fdc_id IS NOT NULL AND\n",
+    "    nutrient_id IS NOT NULL\n",
     "LIMIT 500;\n",
     "\"\"\"\n",
     "\n",
