--- a/llm-cleaning.ipynb
+++ b/llm-cleaning.ipynb
@@ -12,11 +12,12 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-10-23T02:32:35.067160Z",
-     "start_time": "2025-10-23T02:32:35.054767Z"
+     "end_time": "2025-10-23T03:27:10.602079Z",
+     "start_time": "2025-10-23T03:27:09.996408Z"
     }
    },
    "source": [
+    "import json\n",
     "import os\n",
     "\n",
     "import pandas as pd\n",
@@ -32,13 +33,13 @@
     ")"
    ],
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T02:26:01.715430Z",
-     "start_time": "2025-10-23T02:26:01.710571Z"
+     "end_time": "2025-10-23T03:27:10.611288Z",
+     "start_time": "2025-10-23T03:27:10.606752Z"
     }
    },
    "cell_type": "code",
@@ -54,18 +55,18 @@
        "['id', 'title', 'ingredients', 'directions', 'link', 'source', 'ner']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T02:26:01.747227Z",
-     "start_time": "2025-10-23T02:26:01.744383Z"
+     "end_time": "2025-10-23T03:27:10.630651Z",
+     "start_time": "2025-10-23T03:27:10.627944Z"
     }
    },
    "cell_type": "code",
@@ -86,43 +87,52 @@
        "Name: ingredients, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T02:53:43.088728Z",
-     "start_time": "2025-10-23T02:53:29.493331Z"
+     "end_time": "2025-10-23T03:27:10.748492Z",
+     "start_time": "2025-10-23T03:27:10.746696Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "import json\n",
-    "import pandas as pd\n",
-    "\n",
-    "# keep your SYSTEM_MSG as given\n",
     "SYSTEM_MSG = \"\"\"You are a culinary data annotator. Convert free-text ingredient strings into a deduplicated list of base ingredients.\n",
     "\n",
     "Normalization rules:\n",
     "- Keep only ingredient names (no quantities, units, sizes, brands, preparation steps, or descriptors).\n",
     "- Singular, lowercase (e.g., \"tomatoes\" → \"tomato\").\n",
     "- Strip vague phrases like \"to taste\", \"as needed\".\n",
-    "- Collapse synonyms to common pantry terms (e.g., \"margarine\" → \"butter\", \"self-rising flour\" → \"flour\").\n",
-    "- If an item is a compound product (e.g., \"cream of chicken soup\"), keep the product name (\"chicken soup\" is acceptable; do not decompose into sub-ingredients).\n",
-    "- Deduplicate.\n",
+    "- Collapse obvious synonyms to common pantry terms (e.g., \"margarine\" → \"butter\", \"self-rising flour\" → \"flour\").\n",
+    "- Preserve distinct *product variants* when the modifier changes the flavor type or product identity (e.g., \"ranch dressing\", \"italian dressing\", \"soy sauce\", \"beef broth\", \"smoked paprika\").\n",
+    "- But IGNORE purely descriptive or marketing adjectives such as “zesty”, “creamy”, “original”, “classic”, “deluxe”, “fancy”, “reduced-fat”, etc.\n",
+    "- If an item is a compound product (e.g., \"cream of chicken soup\"), keep the product name intact (\"cream of chicken soup\").\n",
+    "- Deduplicate. Output the canonical short form that captures the true flavor/type distinction but omits marketing fluff.\n",
     "\n",
     "Output format:\n",
     "Return ONLY valid JSON. No prose. No code fences.\n",
     "For a single input: [\"ingredient1\", \"ingredient2\", ...]\n",
-    "For batched inputs keyed by id: {\"<id1>\":[...], \"<id2>\":[...]}\n",
-    "\"\"\"\n",
-    "\n",
-    "\n",
+    "\"\"\"\n"
+   ],
+   "id": "4a9591b521c59282",
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-23T03:27:17.551049Z",
+     "start_time": "2025-10-23T03:27:10.772892Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "def _dedupe_preserve_order(items):\n",
     "    seen, out = set(), []\n",
     "    for x in items:\n",
@@ -201,18 +211,33 @@
     "ingredients_table = pd.DataFrame({\n",
     "    \"ingredients_raw\": food_kg_df[\"ingredients\"],\n",
     "    \"ingredients_normalized\": food_kg_df[\"ingredients_normalized\"].apply(json.dumps),\n",
-    "})\n",
-    "ingredients_table.to_csv(\"ingredients.csv\", index=False)\n"
+    "})"
    ],
    "id": "2024df0b9cd294e8",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T02:56:16.208656Z",
-     "start_time": "2025-10-23T02:56:16.203491Z"
+     "end_time": "2025-10-23T03:27:18.201806Z",
+     "start_time": "2025-10-23T03:27:18.199300Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "os.makedirs(\"ingredients\", exist_ok=True)\n",
+    "ingredients_table.to_csv(\"ingredients/ingredients.csv\", index=False)"
+   ],
+   "id": "f05817a977a60f2e",
+   "outputs": [],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-23T03:27:18.208982Z",
+     "start_time": "2025-10-23T03:27:18.205795Z"
     }
    },
    "cell_type": "code",
@@ -231,9 +256,9 @@
        "\n",
        "                              ingredients_normalized  \n",
        "0  [\"potato\", \"onion\", \"vinegar\", \"chive\", \"olive...  \n",
-       "1  [\"rotini\", \"salad mix\", \"dressing\", \"cucumber\"...  \n",
+       "1  [\"rotini\", \"italian dressing\", \"cucumber\", \"to...  \n",
        "2  [\"yam\", \"egg\", \"onion\", \"tomato\", \"green chile...  \n",
-       "3  [\"apples\", \"brown sugar\", \"cinnamon\", \"flour\",...  \n",
+       "3  [\"pork\", \"apple\", \"brown sugar\", \"cinnamon\", \"...  \n",
        "4  [\"linguini\", \"oil\", \"peanut butter\", \"chili po...  "
       ],
       "text/html": [
@@ -268,7 +293,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>{12 oz. pkg. rotini,6 oz. pkg. Good Seasons Ze...</td>\n",
-       "      <td>[\"rotini\", \"salad mix\", \"dressing\", \"cucumber\"...</td>\n",
+       "      <td>[\"rotini\", \"italian dressing\", \"cucumber\", \"to...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -278,7 +303,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>{pork chops,apples,brown sugar,cinnamon,\"flour...</td>\n",
-       "      <td>[\"apples\", \"brown sugar\", \"cinnamon\", \"flour\",...</td>\n",
+       "      <td>[\"pork\", \"apple\", \"brown sugar\", \"cinnamon\", \"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -290,12 +315,25 @@
        "</div>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 20
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-23T03:27:18.268196Z",
+     "start_time": "2025-10-23T03:27:18.266931Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "d07df4714e6598ab",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
