cleanup of code

--- a/llm-cleaning.ipynb
+++ b/llm-cleaning.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-10-23T03:27:10.602079Z",
-     "start_time": "2025-10-23T03:27:09.996408Z"
+     "end_time": "2025-10-23T03:48:28.040802Z",
+     "start_time": "2025-10-23T03:48:27.499543Z"
     }
    },
    "source": [
@@ -23,7 +23,7 @@
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "load_dotenv()  # take environment variables from .env\n",
+    "load_dotenv()  # Take environment variables from .env\n",
     "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "\n",
     "from openai import OpenAI\n",
@@ -38,8 +38,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T03:27:10.611288Z",
-     "start_time": "2025-10-23T03:27:10.606752Z"
+     "end_time": "2025-10-23T03:48:28.048271Z",
+     "start_time": "2025-10-23T03:48:28.044062Z"
     }
    },
    "cell_type": "code",
@@ -65,14 +65,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T03:27:10.630651Z",
-     "start_time": "2025-10-23T03:27:10.627944Z"
+     "end_time": "2025-10-23T03:48:28.056830Z",
+     "start_time": "2025-10-23T03:48:28.054586Z"
     }
    },
    "cell_type": "code",
    "source": [
     "ingredients = food_kg_df['ingredients']\n",
-    "ingredients.head()"
+    "ingredients.head(5)"
    ],
    "id": "db91b53d7596ef51",
    "outputs": [
@@ -97,8 +97,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T03:27:10.748492Z",
-     "start_time": "2025-10-23T03:27:10.746696Z"
+     "end_time": "2025-10-23T03:48:28.157869Z",
+     "start_time": "2025-10-23T03:48:28.156093Z"
     }
    },
    "cell_type": "code",
@@ -127,13 +127,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T03:27:17.551049Z",
-     "start_time": "2025-10-23T03:27:10.772892Z"
+     "end_time": "2025-10-23T03:48:34.172028Z",
+     "start_time": "2025-10-23T03:48:28.185411Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def _dedupe_preserve_order(items):\n",
+    "    # Remove duplicate entries: [\"salt\", \"salt\", \"SALT\"] turns into [\"salt\"]\n",
     "    seen, out = set(), []\n",
     "    for x in items:\n",
     "        x = (x or \"\").strip().lower()\n",
@@ -144,9 +145,10 @@
     "\n",
     "\n",
     "def extract_ingredients(description):\n",
-    "    # guard for NaN/empty\n",
+    "    # guard for NaN\n",
     "    if description is None:\n",
     "        return []\n",
+    "    # guard for empty\n",
     "    text = str(description).strip()\n",
     "    if not text:\n",
     "        return []\n",
@@ -166,7 +168,7 @@
     "    )\n",
     "    content = response.choices[0].message.content\n",
     "\n",
-    "    # try to parse; minimal repair retry if not valid JSON\n",
+    "    # try to parse; try to repair with one retry if not valid JSON\n",
     "    try:\n",
     "        parsed = json.loads(content)\n",
     "    except json.JSONDecodeError:\n",
@@ -184,6 +186,7 @@
     "            temperature=0,\n",
     "        )\n",
     "        content = response2.choices[0].message.content\n",
+    "        # check if it worked\n",
     "        try:\n",
     "            parsed = json.loads(content)\n",
     "        except json.JSONDecodeError:\n",
@@ -203,15 +206,8 @@
     "    return []\n",
     "\n",
     "\n",
-    "# ---- apply to your df ----\n",
-    "# expects a df named food_kg_df with a column \"ingredients\"\n",
-    "food_kg_df[\"ingredients_normalized\"] = food_kg_df[\"ingredients\"].apply(extract_ingredients)\n",
-    "\n",
-    "# save: lists as JSON strings in CSV\n",
-    "ingredients_table = pd.DataFrame({\n",
-    "    \"ingredients_raw\": food_kg_df[\"ingredients\"],\n",
-    "    \"ingredients_normalized\": food_kg_df[\"ingredients_normalized\"].apply(json.dumps),\n",
-    "})"
+    "# apply function to ingredients column\n",
+    "food_kg_df[\"ingredients_normalized\"] = food_kg_df[\"ingredients\"].apply(extract_ingredients)"
    ],
    "id": "2024df0b9cd294e8",
    "outputs": [],
@@ -220,12 +216,18 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T03:27:18.201806Z",
-     "start_time": "2025-10-23T03:27:18.199300Z"
+     "end_time": "2025-10-23T03:48:34.748123Z",
+     "start_time": "2025-10-23T03:48:34.744849Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "# CSV can’t store native Python lists (they are objects), so use JSON dump\n",
+    "ingredients_table = pd.DataFrame({\n",
+    "    \"ingredients_raw\": food_kg_df[\"ingredients\"],\n",
+    "    \"ingredients_normalized\": food_kg_df[\"ingredients_normalized\"].apply(json.dumps),\n",
+    "})\n",
+    "# Create directory if it doesn't exist and save\n",
     "os.makedirs(\"ingredients\", exist_ok=True)\n",
     "ingredients_table.to_csv(\"ingredients/ingredients.csv\", index=False)"
    ],
@@ -236,8 +238,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T03:27:18.208982Z",
-     "start_time": "2025-10-23T03:27:18.205795Z"
+     "end_time": "2025-10-23T03:48:34.753595Z",
+     "start_time": "2025-10-23T03:48:34.750880Z"
     }
    },
    "cell_type": "code",
@@ -325,13 +327,107 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T03:27:18.268196Z",
-     "start_time": "2025-10-23T03:27:18.266931Z"
+     "end_time": "2025-10-23T03:48:34.814189Z",
+     "start_time": "2025-10-23T03:48:34.809749Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Test load to get Python lists\n",
+    "df = pd.read_csv(\"ingredients/ingredients.csv\")\n",
+    "df[\"ingredients_normalized\"] = df[\"ingredients_normalized\"].apply(json.loads)\n",
+    "df.head()"
+   ],
+   "id": "d07df4714e6598ab",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                                     ingredients_raw  \\\n",
+       "0  {2 c. cubed red potatoes,2 Tbsp. finely choppe...   \n",
+       "1  {12 oz. pkg. rotini,6 oz. pkg. Good Seasons Ze...   \n",
+       "2  {1 1/2 lb. yams,1 egg,1 chopped onion,1 choppe...   \n",
+       "3  {pork chops,apples,brown sugar,cinnamon,\"flour...   \n",
+       "4  {1 lb. linguini,2 Tbsp. oil,3 Tbsp. peanut but...   \n",
+       "\n",
+       "                              ingredients_normalized  \n",
+       "0  [potato, onion, vinegar, chive, olive oil, sug...  \n",
+       "1  [rotini, italian dressing, cucumber, tomato, b...  \n",
+       "2  [yam, egg, onion, tomato, green chile, bread c...  \n",
+       "3  [pork, apple, brown sugar, cinnamon, flour, sa...  \n",
+       "4  [linguini, oil, peanut butter, chili powder, t...  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ingredients_raw</th>\n",
+       "      <th>ingredients_normalized</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>{2 c. cubed red potatoes,2 Tbsp. finely choppe...</td>\n",
+       "      <td>[potato, onion, vinegar, chive, olive oil, sug...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{12 oz. pkg. rotini,6 oz. pkg. Good Seasons Ze...</td>\n",
+       "      <td>[rotini, italian dressing, cucumber, tomato, b...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>{1 1/2 lb. yams,1 egg,1 chopped onion,1 choppe...</td>\n",
+       "      <td>[yam, egg, onion, tomato, green chile, bread c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>{pork chops,apples,brown sugar,cinnamon,\"flour...</td>\n",
+       "      <td>[pork, apple, brown sugar, cinnamon, flour, sa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>{1 lb. linguini,2 Tbsp. oil,3 Tbsp. peanut but...</td>\n",
+       "      <td>[linguini, oil, peanut butter, chili powder, t...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-23T03:48:34.880994Z",
+     "start_time": "2025-10-23T03:48:34.879763Z"
     }
    },
    "cell_type": "code",
    "source": "",
-   "id": "d07df4714e6598ab",
+   "id": "2661eff38d624e1e",
    "outputs": [],
    "execution_count": null
   }
