--- a/llm-cleaning.ipynb
+++ b/llm-cleaning.ipynb
@@ -133,8 +133,9 @@
    },
    "cell_type": "code",
    "source": [
-    "def _dedupe_preserve_order(items):\n",
-    "    # Remove duplicate entries: [\"salt\", \"salt\", \"SALT\"] turns into [\"salt\"]\n",
+    "def _deduplicate_preserve_order(items):\n",
+    "    # Post processing step to remove duplicate entries\n",
+    "    # [\"salt\", \"salt\", \"SALT\"] => [\"salt\"]\n",
     "    seen, out = set(), []\n",
     "    for x in items:\n",
     "        x = (x or \"\").strip().lower()\n",
@@ -195,14 +196,14 @@
     "\n",
     "    # normalize shape\n",
     "    if isinstance(parsed, list):\n",
-    "        return _dedupe_preserve_order([str(x) for x in parsed])\n",
+    "        return _deduplicate_preserve_order([str(x) for x in parsed])\n",
     "    # if model returned an object (shouldn't for single row), flatten values\n",
     "    if isinstance(parsed, dict):\n",
     "        flat = []\n",
     "        for v in parsed.values():\n",
     "            if isinstance(v, list):\n",
     "                flat.extend([str(x) for x in v])\n",
-    "        return _dedupe_preserve_order(flat)\n",
+    "        return _deduplicate_preserve_order(flat)\n",
     "    return []\n",
     "\n",
     "\n",
