removed some spacing for slides

--- a/llm-cleaning.ipynb
+++ b/llm-cleaning.ipynb
@@ -27,6 +27,7 @@
     "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "\n",
     "from openai import OpenAI\n",
+    "from openai.types.chat import ChatCompletionSystemMessageParam, ChatCompletionUserMessageParam\n",
     "\n",
     "client = OpenAI(\n",
     "    api_key=api_key\n",
@@ -153,11 +154,9 @@
     "    text = str(description).strip()\n",
     "    if not text:\n",
     "        return []\n",
-    "\n",
     "    # reinforce JSON-only on the user message\n",
     "    user_msg = f\"\"\"Input: {text}\n",
     "Return ONLY a JSON array of deduplicated base ingredients in lowercase, e.g. [\"chicken\",\"butter\"].\"\"\"\n",
-    "\n",
     "    response = client.chat.completions.create(\n",
     "        model=\"gpt-4o-mini\",\n",
     "        messages=[\n",
@@ -168,7 +167,6 @@
     "        temperature=0,\n",
     "    )\n",
     "    content = response.choices[0].message.content\n",
-    "\n",
     "    # try to parse; try to repair with one retry if not valid JSON\n",
     "    try:\n",
     "        parsed = json.loads(content)\n",
@@ -193,7 +191,6 @@
     "        except json.JSONDecodeError:\n",
     "            # give up gracefully\n",
     "            return []\n",
-    "\n",
     "    # normalize shape\n",
     "    if isinstance(parsed, list):\n",
     "        return _deduplicate_preserve_order([str(x) for x in parsed])\n",
@@ -205,8 +202,6 @@
     "                flat.extend([str(x) for x in v])\n",
     "        return _deduplicate_preserve_order(flat)\n",
     "    return []\n",
-    "\n",
-    "\n",
     "# apply function to ingredients column\n",
     "food_kg_df[\"ingredients_normalized\"] = food_kg_df[\"ingredients\"].apply(extract_ingredients)"
    ],
