--- a/llm-cleaning.ipynb
+++ b/llm-cleaning.ipynb
@@ -27,7 +27,6 @@
     "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "\n",
     "from openai import OpenAI\n",
-    "from openai.types.chat import ChatCompletionSystemMessageParam, ChatCompletionUserMessageParam\n",
     "\n",
     "client = OpenAI(\n",
     "    api_key=api_key\n",
@@ -66,13 +65,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T03:48:28.056830Z",
-     "start_time": "2025-10-23T03:48:28.054586Z"
+     "end_time": "2025-10-23T04:28:53.183292Z",
+     "start_time": "2025-10-23T04:28:53.179938Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "ingredients = food_kg_df['ingredients']\n",
+    "ingredients = food_kg_df['ner']\n",
     "ingredients.head(5)"
    ],
    "id": "db91b53d7596ef51",
@@ -80,20 +79,20 @@
     {
      "data": {
       "text/plain": [
-       "0    {2 c. cubed red potatoes,2 Tbsp. finely choppe...\n",
-       "1    {12 oz. pkg. rotini,6 oz. pkg. Good Seasons Ze...\n",
-       "2    {1 1/2 lb. yams,1 egg,1 chopped onion,1 choppe...\n",
-       "3    {pork chops,apples,brown sugar,cinnamon,\"flour...\n",
-       "4    {1 lb. linguini,2 Tbsp. oil,3 Tbsp. peanut but...\n",
-       "Name: ingredients, dtype: object"
+       "0    {potatoes,purple onion,white wine vinegar,chiv...\n",
+       "1    {rotini,Italian salad mix,Italian dressing,cuc...\n",
+       "2    {yams,egg,onion,tomato,green chile,bread crumb...\n",
+       "3       {pork chops,apples,brown sugar,cinnamon,flour}\n",
+       "4    {linguini,oil,peanut butter,chili powder,Tabas...\n",
+       "Name: ner, dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 9
   },
   {
    "metadata": {
@@ -202,6 +201,8 @@
     "                flat.extend([str(x) for x in v])\n",
     "        return _deduplicate_preserve_order(flat)\n",
     "    return []\n",
+    "\n",
+    "\n",
     "# apply function to ingredients column\n",
     "food_kg_df[\"ingredients_normalized\"] = food_kg_df[\"ingredients\"].apply(extract_ingredients)"
    ],
