--- a/llm-cleaning.ipynb
+++ b/llm-cleaning.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-10-23T03:48:28.040802Z",
-     "start_time": "2025-10-23T03:48:27.499543Z"
+     "end_time": "2025-10-23T04:32:47.278761Z",
+     "start_time": "2025-10-23T04:32:47.268290Z"
     }
    },
    "source": [
@@ -33,13 +33,13 @@
     ")"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T03:48:28.048271Z",
-     "start_time": "2025-10-23T03:48:28.044062Z"
+     "end_time": "2025-10-23T04:32:47.288529Z",
+     "start_time": "2025-10-23T04:32:47.284585Z"
     }
    },
    "cell_type": "code",
@@ -55,18 +55,18 @@
        "['id', 'title', 'ingredients', 'directions', 'link', 'source', 'ner']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T04:28:53.183292Z",
-     "start_time": "2025-10-23T04:28:53.179938Z"
+     "end_time": "2025-10-23T04:32:47.299310Z",
+     "start_time": "2025-10-23T04:32:47.296782Z"
     }
    },
    "cell_type": "code",
@@ -87,48 +87,66 @@
        "Name: ner, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T03:48:28.157869Z",
-     "start_time": "2025-10-23T03:48:28.156093Z"
+     "end_time": "2025-10-23T04:32:47.328532Z",
+     "start_time": "2025-10-23T04:32:47.326559Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "# SYSTEM_MSG = \"\"\"You are a culinary data annotator. Convert free-text ingredient strings into a deduplicated list of base ingredients.\n",
+    "#\n",
+    "# Normalization rules:\n",
+    "# - Keep only ingredient names (no quantities, units, sizes, brands, preparation steps, or descriptors).\n",
+    "# - Singular, lowercase (e.g., \"tomatoes\" → \"tomato\").\n",
+    "# - Strip vague phrases like \"to taste\", \"as needed\".\n",
+    "# - Collapse obvious synonyms to common pantry terms (e.g., \"margarine\" → \"butter\", \"self-rising flour\" → \"flour\").\n",
+    "# - Preserve distinct *product variants* when the modifier changes the flavor type or product identity (e.g., \"ranch dressing\", \"italian dressing\", \"soy sauce\", \"beef broth\", \"smoked paprika\").\n",
+    "# - But IGNORE purely descriptive or marketing adjectives such as “zesty”, “creamy”, “original”, “classic”, “deluxe”, “fancy”, “reduced-fat”, etc.\n",
+    "# - If an item is a compound product (e.g., \"cream of chicken soup\"), keep the product name intact (\"cream of chicken soup\").\n",
+    "# - Deduplicate. Output the canonical short form that captures the true flavor/type distinction but omits marketing fluff.\n",
+    "#\n",
+    "# Output format:\n",
+    "# Return ONLY valid JSON. No prose. No code fences.\n",
+    "# For a single input: [\"ingredient1\", \"ingredient2\", ...]\n",
+    "# \"\"\"\n",
     "SYSTEM_MSG = \"\"\"You are a culinary data annotator. Convert free-text ingredient strings into a deduplicated list of base ingredients.\n",
     "\n",
     "Normalization rules:\n",
     "- Keep only ingredient names (no quantities, units, sizes, brands, preparation steps, or descriptors).\n",
     "- Singular, lowercase (e.g., \"tomatoes\" → \"tomato\").\n",
-    "- Strip vague phrases like \"to taste\", \"as needed\".\n",
-    "- Collapse obvious synonyms to common pantry terms (e.g., \"margarine\" → \"butter\", \"self-rising flour\" → \"flour\").\n",
-    "- Preserve distinct *product variants* when the modifier changes the flavor type or product identity (e.g., \"ranch dressing\", \"italian dressing\", \"soy sauce\", \"beef broth\", \"smoked paprika\").\n",
-    "- But IGNORE purely descriptive or marketing adjectives such as “zesty”, “creamy”, “original”, “classic”, “deluxe”, “fancy”, “reduced-fat”, etc.\n",
-    "- If an item is a compound product (e.g., \"cream of chicken soup\"), keep the product name intact (\"cream of chicken soup\").\n",
-    "- Deduplicate. Output the canonical short form that captures the true flavor/type distinction but omits marketing fluff.\n",
+    "- Strip vague/marketing adjectives: “zesty”, “creamy”, “original”, “classic”, “deluxe”, “fancy”, “reduced-fat”, etc.\n",
+    "- Preserve true flavor/type distinctions (e.g., \"ranch dressing\", \"italian dressing\", \"soy sauce\", \"beef broth\", \"smoked paprika\").\n",
+    "- **Differentiate mixes vs. dressings:**\n",
+    "  - If the phrase ends with **\"dressing\"** or **\"vinaigrette\"**, treat it as a **dressing** and keep the flavor/type (e.g., \"italian dressing\", \"ranch dressing\").\n",
+    "  - If the phrase contains **\"salad mix\"**, **\"spring mix\"**, **\"mixed greens\"**, or **\"coleslaw mix\"**, treat it as a **greens/vegetable mix** (not a dressing). Normalize marketing adjectives away (e.g., \"italian salad mix\" → \"salad mix\", \"zesty spring mix\" → \"spring mix\").\n",
+    "- Keep common spice/herb **seasoning blends** distinct from dressings and mixes (e.g., \"italian seasoning\", \"taco seasoning\", \"ranch seasoning\") and do not convert them to dressings.\n",
+    "- For compound products, keep the product intact (e.g., \"cream of chicken soup\").\n",
+    "- Deduplicate. Output the shortest specific name that preserves real type distinctions.\n",
     "\n",
     "Output format:\n",
-    "Return ONLY valid JSON. No prose. No code fences.\n",
-    "For a single input: [\"ingredient1\", \"ingredient2\", ...]\n",
-    "\"\"\"\n"
+    "Return ONLY valid JSON array of strings. No prose. No code fences.\n",
+    "Example: [\"chicken\",\"italian dressing\",\"salad mix\",\"olive oil\"]\n",
+    "\"\"\""
    ],
    "id": "4a9591b521c59282",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T03:48:34.172028Z",
-     "start_time": "2025-10-23T03:48:28.185411Z"
+     "end_time": "2025-10-23T04:32:52.370460Z",
+     "start_time": "2025-10-23T04:32:47.357577Z"
     }
    },
    "cell_type": "code",
@@ -208,13 +226,13 @@
    ],
    "id": "2024df0b9cd294e8",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T03:48:34.748123Z",
-     "start_time": "2025-10-23T03:48:34.744849Z"
+     "end_time": "2025-10-23T04:32:52.395669Z",
+     "start_time": "2025-10-23T04:32:52.391773Z"
     }
    },
    "cell_type": "code",
@@ -223,6 +241,7 @@
     "ingredients_table = pd.DataFrame({\n",
     "    \"ingredients_raw\": food_kg_df[\"ingredients\"],\n",
     "    \"ingredients_normalized\": food_kg_df[\"ingredients_normalized\"].apply(json.dumps),\n",
+    "    # \"ner\": food_kg_df[\"ner\"],\n",
     "})\n",
     "# Create directory if it doesn't exist and save\n",
     "os.makedirs(\"ingredients\", exist_ok=True)\n",
@@ -230,13 +249,13 @@
    ],
    "id": "f05817a977a60f2e",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T03:48:34.753595Z",
-     "start_time": "2025-10-23T03:48:34.750880Z"
+     "end_time": "2025-10-23T04:32:52.405409Z",
+     "start_time": "2025-10-23T04:32:52.401450Z"
     }
    },
    "cell_type": "code",
@@ -255,9 +274,9 @@
        "\n",
        "                              ingredients_normalized  \n",
        "0  [\"potato\", \"onion\", \"vinegar\", \"chive\", \"olive...  \n",
-       "1  [\"rotini\", \"italian dressing\", \"cucumber\", \"to...  \n",
+       "1  [\"rotini\", \"salad mix\", \"italian dressing\", \"c...  \n",
        "2  [\"yam\", \"egg\", \"onion\", \"tomato\", \"green chile...  \n",
-       "3  [\"pork\", \"apple\", \"brown sugar\", \"cinnamon\", \"...  \n",
+       "3  [\"apples\", \"brown sugar\", \"cinnamon\", \"flour\",...  \n",
        "4  [\"linguini\", \"oil\", \"peanut butter\", \"chili po...  "
       ],
       "text/html": [
@@ -292,7 +311,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>{12 oz. pkg. rotini,6 oz. pkg. Good Seasons Ze...</td>\n",
-       "      <td>[\"rotini\", \"italian dressing\", \"cucumber\", \"to...</td>\n",
+       "      <td>[\"rotini\", \"salad mix\", \"italian dressing\", \"c...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -302,7 +321,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>{pork chops,apples,brown sugar,cinnamon,\"flour...</td>\n",
-       "      <td>[\"pork\", \"apple\", \"brown sugar\", \"cinnamon\", \"...</td>\n",
+       "      <td>[\"apples\", \"brown sugar\", \"cinnamon\", \"flour\",...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -314,18 +333,18 @@
        "</div>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 26
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T03:48:34.814189Z",
-     "start_time": "2025-10-23T03:48:34.809749Z"
+     "end_time": "2025-10-23T04:32:52.441740Z",
+     "start_time": "2025-10-23T04:32:52.437113Z"
     }
    },
    "cell_type": "code",
@@ -349,9 +368,9 @@
        "\n",
        "                              ingredients_normalized  \n",
        "0  [potato, onion, vinegar, chive, olive oil, sug...  \n",
-       "1  [rotini, italian dressing, cucumber, tomato, b...  \n",
+       "1  [rotini, salad mix, italian dressing, cucumber...  \n",
        "2  [yam, egg, onion, tomato, green chile, bread c...  \n",
-       "3  [pork, apple, brown sugar, cinnamon, flour, sa...  \n",
+       "3  [apples, brown sugar, cinnamon, flour, pork, s...  \n",
        "4  [linguini, oil, peanut butter, chili powder, t...  "
       ],
       "text/html": [
@@ -386,7 +405,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>{12 oz. pkg. rotini,6 oz. pkg. Good Seasons Ze...</td>\n",
-       "      <td>[rotini, italian dressing, cucumber, tomato, b...</td>\n",
+       "      <td>[rotini, salad mix, italian dressing, cucumber...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -396,7 +415,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>{pork chops,apples,brown sugar,cinnamon,\"flour...</td>\n",
-       "      <td>[pork, apple, brown sugar, cinnamon, flour, sa...</td>\n",
+       "      <td>[apples, brown sugar, cinnamon, flour, pork, s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -408,18 +427,18 @@
        "</div>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 27
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T03:48:34.880994Z",
-     "start_time": "2025-10-23T03:48:34.879763Z"
+     "end_time": "2025-10-23T04:32:52.512200Z",
+     "start_time": "2025-10-23T04:32:52.510898Z"
     }
    },
    "cell_type": "code",
